--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
   <string name="reset_note" translatable="false">Tapping \"Reset\" will reset LiteRT-LM engine only. The game progress won\'t be affected.</string>
   <string name="resetting_engine" translatable="false">Resetting engine...</string>
   <string name="reinitializing_description" translatable="false">The game progress won\'t be affected</string>
-  <string name="settings_dialog_tos_title" translatable="false">Terms of services</string>
+  <string name="settings_dialog_tos_title" translatable="false">Research consent</string>
   <string name="text_input_placeholder_text_classification" translatable="false">Type movie review to classify…</string>
   <string name="text_image_generation_text_field_placeholder" translatable="false">Type prompt…</string>
   <string name="text_input_placeholder_llm_chat" translatable="false">Type prompt…</string>
